# ecgraph

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  dgnn_server.cc  dgnn_server.h  example.cc  example2.cc  example3.cc  main.cc
c-ares/: CMakeLists.txt
c-ares/src/lib/: CMakeLists.txt
c-ares/src/tools/: CMakeLists.txt
c-ares/test/: CMakeLists.txt
cmakelist/: CMakeLists.txt
core/: CMakeLists.txt
core/compress/: CMakeLists.txt  compress.cc  compress.h
core/context/: Context.cc  Context.h
core/partition/: CMakeLists.txt  GeneralPartition.cc  GeneralPartition.h  Partitioner.cc  Partitioner.h  RandomPartitioner.cc  RandomPartitioner.h
core/protos/: dgnn_test.proto
core/resource/: CMakeLists.txt  pb11_ec.cc
core/service/: CMakeLists.txt  dgnn_client.cc  dgnn_client.h  dgnn_server.cc  dgnn_server.h  router.cc  router.h
core/store/: CMakeLists.txt  ServerStore.cc  ServerStore.h  WorkerStore.cc  WorkerStore.h
core/structure/: Array.cc
core/util/: CMakeLists.txt  Length.cc  check.cc  check.h  string_split.cc  string_split.h  threadUtil.cc  threadUtil.h
cpptest/: Animal.cc  CMakeLists.txt  MultiThread.cc  address_or_value.cc  array_variable_test.cc  bittest.cc  bittest.h  get_length.cc  map_insert_test.cc  pointer_test.cc  startMaster.cc  staticTest.cc  test_condition_variable.cc  test_matrix_multi.cc  test_mutex.cc  test_wait.cc  vector_test.cc
ecgraph/: __init__.py
protos/: dgnn_test.proto
python/: requirements.txt
python/autograd/: autograd.py  autograd_new.py
python/context/: context.py  momentum.py  store.py
python/data_processing/: aligraph.py  dataEncode.py  dataPartition.py  generateData.py  metisInput.py  metisOutputToPartition.py
python/data_processing/cora/: cora.py
python/data_processing/ogbn/: obgnproducts_process.py
python/data_processing/ogbn-arxiv/: ogbn-arxiv.py
python/data_processing/ogbn_paper/: download.py
python/data_processing/pubmed/: preProcessing.py
python/data_processing/reddit/: reddit_process.py
python/data_structure/: graph.py
python/dist_gat/: dist_start.py  layers.py  models.py
python/dist_gcn/: dist_start.py  layers.py  models.py
python/dist_gcn_agg_grad/: dist_start.py  layers.py  models.py
python/dist_gcn_agg_grad_sample/: dist_start.py  layers.py  models.py
python/dist_gcn_agg_grad_sample/statis/: datasetStatis.py
python/dist_gcn_backup_not_exact_propagation/: dist_start.py  layers.py  models.py
python/dist_sage/: dist_start.py  layers.py  models.py
python/ecgraph/: BackWard.py  ECTensor.py  Function.py  __init__.py
python/ecgraph/autograd/: autograd_new.py
python/ecgraph/context/: __init__.py  context.py
python/ecgraph/data_structure/: graph.py
python/ecgraph/optimizer/: __init__.py  adam.py
python/ecgraph/util_python/: data_trans.py  param_parser.py  param_util.py  remote_access.py
python/example/dist_gcn_param/: dist_start.py  layers.py  models.py
python/example/dist_gcn_param_sample/: dist_start.py  layers.py
python/graphsage/: aggregators.py  encoders.py  model.py
python/test/: adam_test.py  addressOrValue.py  callable_class.py  extend_class.py  getattr.py  graph_statistic.py  itemCompare.py  list_test.py  listconcat.py  matrix_multiple.py  multiProcessing.py  multiThreads.py  multiply.py  npwhere.py  numpyToList.py  pybin11_test.py  sum_div.py  test_pybind11_trans.py
python/test/base_grammar/: defaultdict_test.py  filter.py  permutation.py  squeeze.py  strip.py
python/test/getattr_used/: access_dict.py
python/test/pytorch_test/: add_.py  autograd.py  cat_chuck.py  concat_diff.py  diff.py  embedding.py  network_test.py  normalize.py  pytorch_backpropagation.py  softmax_test.py  tensors_test.py  test_autograd.py
python/util_python/: data_trans.py  metric.py  param_parser.py  param_util.py  remote_access.py
