aux_source_directory(. DIR_LIB_SRCS)
add_library(bittest ${DIR_LIB_SRCS} pointer_test.cc address_or_value.cc get_length.cc array_variable_test.cc vector_test.cc
         Animal.cc test_wait.cc)
add_executable(pointer_test pointer_test.cc)
add_executable(address_or_value address_or_value.cc)
add_executable(get_length get_length.cc)
add_executable(array_variable_test array_variable_test.cc)
add_executable(vector_test vector_test.cc)
add_executable(map_insert_test map_insert_test.cc)
add_executable(MultiThread MultiThread.cc)
add_executable(staticTest staticTest.cc)
add_executable(test_condition_variable test_condition_variable.cc)
add_executable(test_wait test_wait.cc)
add_executable(test_matrix_multi test_matrix_multi.cc)
add_executable(test_mutex test_mutex.cc)
#add_executable(startMaster startMaster.cc)
#add_executable(main_test main.cc)
find_package(Threads)

#target_link_libraries(startMaster client_lib dgnn_server_lib)
target_link_libraries(MultiThread ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(staticTest ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(test_condition_variable ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(test_wait ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(test_mutex ${CMAKE_THREAD_LIBS_INIT})
#target_link_libraries(main_test client_lib)